test/invalid/module_name_mismatch.d
//T error: module_name_mismatch.d:4:7:
//T error: Module name mismatches filename

module module_name_match;
